# ion-lsp

./: Cargo.toml  README.md
ion-language-server/: Cargo.toml  config.nvim.lua
ion-language-server/src/: handlers.rs  main.rs  server.rs  types.rs
ion-tree-sitter/: README.md
tree-sitter-ion/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.dockerfile
tree-sitter-ion/bindings/c/: tree-sitter-Ion.pc.in
tree-sitter-ion/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-ion/bindings/node/: binding.cc
tree-sitter-ion/bindings/python/tree_sitter_ion/: __init__.py  binding.c
tree-sitter-ion/bindings/rust/: build.rs  lib.rs
tree-sitter-ion/bindings/swift/TreeSitterIon/: Ion.h
tree-sitter-ion/queries/: highlights.scm
tree-sitter-ion/src/: grammar.json  node-types.json  parser.c
tree-sitter-ion/test/corpus/: annotations.txt  lists.txt  objects.txt  strings.txt  sym_table.txt  symbols.txt
