[package]
name = "ion-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["io-util", "io-std", "macros", "rt-multi-thread"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
dashmap = "5.5"
serde_json = "1.0"
ion-rs = "0.18"
ropey = "1.6"
anyhow = "1.0"
log = "0.4"
lsp-text = "0.7"
